[BUG] Fix fullscreen mode on safari

--- a/Examples/SimpleTest/main.css
+++ b/Examples/SimpleTest/main.css
@@ -5,11 +5,3 @@
     height: 300px;
     width: 500px;
 }
-
-/* deeper elements */
-
-:-webkit-full-screen video {
-	width: 100%;
-	height: 100%;
-}
-  
